--- a/index.html
+++ b/index.html
@@ -32,27 +32,25 @@
     </div>  
     <!-- Hero -->
     <div class="section-container"> 
-        <img src="./assets/laberinto 5.webp" alt="" class="img-hero">
         <section class="section" id="#hero">
             <div class="description-container">
                 <div class="text-container">
                     <h1 class="animate__animated animate__fadeInDown ">El desafio comienza</h1>
-                    <p>Una aventura que no se te puede escapar</p>
+                    <p>¡Una aventura que no se te puede escapar!</p>
                 </div> 
             </div>
-            <div class="hero-img"></div>
         </section>
     </div>
+    <!-- Intro -->
     <div class="section-container">
         <section class="section">
             <div class="about-content">
                 <h2>¿Estás listo para vivir la experiencia?</h2>
-                <p>
-                Una vivencia intensa donde la combinación de tiempo limitado, espacios confinados y la necesidad de pensar desde diferentes perspectivas, te invita a ser el verdadero protagónista de una aventura inolvidable.</p>
+                <p>Una vivencia intensa donde la combinación de tiempo limitado, espacios confinados y la necesidad de pensar desde diferentes perspectivas, te invita a ser el verdadero protagónista de una aventura inolvidable.</p>
             </div> 
         </section>
     </div>
-    <!-- Pasos -->
+    <!-- Iconos-->
     <div class="section-container">
         <section class="section"> 
             <div class="item-container">
@@ -168,6 +166,7 @@
                 </div>
         </section>
     </div>
+    <!-- Footer -->
     <footer class="footer">   
         <div class="logo-footer">
             <ul>
