--- a/login.html
+++ b/login.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Way Out</title>
+    <title>The Way Out</title>
     <link rel="stylesheet" href="styleslogin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
 </head>
     <body>
+        <header>
+            <img src="./assets/two_logo.png" alt="two-logo">
+        </header>
         <div class="login-container"> 
             <section class="login-content">
                 <h1>Log In</h1>
